--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class="col-lg-6 mx-auto">
           <p class="lead mb-4">Sip into a world of bold flavors and cozy moments with every Starbucks brew.</p>
           <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-            <button type="button" class="btn btn-primary btn-lg px-4 gap-3"> AASKAR </button>
+            <button type="button" class="btn btn-primary btn-lg px-4 gap-3"> RANA </button>
             <button type="button" class="btn btn-outline-secondary btn-lg px-4">RANA</button>
           </div>
         </div>
